rl group nyc; do kinematics next

--- a/RBOT250_2020/Notes/sections/robo_confs.tex
+++ b/RBOT250_2020/Notes/sections/robo_confs.tex
@@ -22,7 +22,7 @@ The assembly formed after the various connections between links and joints is ca
 	\begin{tabular}{@{}c@{}c@{}}
 		\includegraphics[width=0.50\linewidth ,height=0.4\columnwidth]{figures/octopus.jpg} \,\,
 		&
-		\includegraphics[width=0.48\columnwidth,height=0.4\columnwidth]{figures/soft_parallel.png}
+		\includegraphics[width=0.48\columnwidth,height=0.4\columnwidth]{figures/soft_parallel.jpg}
 	\end{tabular}
 	\caption{Soft Compliant Manipulators. \textit{Left:} An octopus-inspired soft robot (classified under muscular hydrostats). \copyright Cecilia Laschi. \textit{Right:} A soft parallel robot manipulator ~\cite{hopkins2015synthesis}.}
 	\label{fig:soft_robots}
@@ -99,7 +99,7 @@ As we close this part of the module, bear in mind that open kinematic chains are
  \begin{figure}[tbph!]
  	\centering
  	\begin{tabular}{@{}c@{}c@{}}
- 		\includegraphics[width=0.50\linewidth ,height=0.4\columnwidth]{../../../Papers/PhDThesis/figures/GoughPlatform.png} \,\,
+ 		\includegraphics[width=0.50\linewidth ,height=0.4\columnwidth]{../../../Papers/PhDThesis/figures/GoughPlatform.jpg} \,\,
  		&
  		\includegraphics[width=0.48\columnwidth,height=0.4\columnwidth]{../../../Papers/PhDThesis/figures/GoughPlatformNow.jpg}
  	\end{tabular}
@@ -132,7 +132,7 @@ However, in mechanisms, we are more concerned about the relative motion between 
 \begin{figure}[tb!]
 	\centering
 	\includegraphics[width=\columnwidth]{figures/four-bar-linkage.png}
-	\caption{The planar $RRR$ linkage, (\textit{left}) is modified in (\textit{right}) to allow spatial spin-movement of the coupler 3; the connectivity $\mathscr{C}_{13}=2$). Reprinted from ~\cite{HuntBook1977}.}
+	\caption{The planar $RRRR$ linkage, (\textit{left}) is modified in (\textit{right}) to allow spatial spin-movement of the coupler 3; the connectivity $\mathscr{C}_{13}=2$. Reprinted from ~\cite{HuntBook1977}.}
 	\label{fig:four_bar}
 \end{figure}
 %
